--- a/app/src/main/res/layout/fragment_add_trip.xml
+++ b/app/src/main/res/layout/fragment_add_trip.xml
@@ -207,7 +207,7 @@
                         android:textSize="18sp"
                         android:textColor="@color/monochrome_gray" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/input_date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -217,6 +217,7 @@
                         android:clickable="true"
                         android:textColor="@color/monochrome_black"
                         android:focusable="false"
+                        android:textSize="18sp"
                         android:inputType="date"
                         android:background="@drawable/edittext_box" />
 
